--- a/History/History.html
+++ b/History/History.html
@@ -198,7 +198,7 @@
 		    <li><a href="../Motorsport/Motorsport.html">Motorsport</a></li>
 		    <li><a href="../History/History.html">History</a></li>
 	    </ul>
-	    <p class="text-center">Copyright @2017 | Designed With by <a href="#">Fajar Company</a></p>
+	    <p class="text-center">Copyright @2017 | Designed With by <a href="#">GOROSEI Company</a></p>
 	    <!-- <ul class="social_footer_ul">
 		    <li><a href="http://webenlance.com"><i class="fab fa-facebook-f"></i></a></li>
 		    <li><a href="http://webenlance.com"><i class="fab fa-twitter"></i></a></li>
