--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       		<div class="carousel-item">
 		        <!-- <img src="img/tiggaa.png" class="d-block w-100" alt="..."> -->
 		        <video class="video-fluid" autoplay loop muted style="width: 100%;">
-			        <source src="Videos/Lamborghini_Aventador.mp4" type="video/mp4"/>
+			        <source src="Videos/Lamborghini_Home.mp4" type="video/mp4"/>
 			      </video>
 		        <div class="carousel-caption d-none d-md-block">
 		          <h5>Third slide label</h5>
@@ -331,31 +331,31 @@
 				<div class=" col-md-4">
 					<h5 class="headin5_amrc col_white_amrc pt2">Models</h5>
 					<ul class="footer_ul_amrc">
-						<li><a href="#">Urus</a></li>
-						<li><a href="Huracan_EVO.html">Huracan EVO</a></li>
-						<li><a href="Huracan_RWD.html">Huracan RWD</a></li>
-						<li><a href="Aventador_S.html">Aventador S</a></li>
-						<li><a href="Aventador_SVJ.html">Aventador SVJ</a></li>
+						<li><a href="Models/Urus.html">Urus</a></li>
+						<li><a href="Models/Huracan_EVO.html">Huracan EVO</a></li>
+						<li><a href="Models/Huracan_RWD.html">Huracan RWD</a></li>
+						<li><a href="Models/Aventador_S.html">Aventador S</a></li>
+						<li><a href="Models/Aventador_SVJ.html">Aventador SVJ</a></li>
 					</ul>
 				</div>
 				<div class=" col-md-4">
 					<h5 class="headin5_amrc col_white_amrc pt2">Brand</h5>
 						<ul class="footer_ul_amrc">
-							<li><a href="../Brand/Ferruccio.html">Ferruccio Lamborghini</a></li>
-							<li><a href="../Brand/Marcello.html">Marcello Gandhini</a></li>
-							<li><a href="../Brand/Giampaollo.html">Giampaollo Dallara</a></li>
-							<li><a href="../Brand/Masterpieces.html">Masterpieces</a></li>
-							<li><a href="../Brand/Design.html">Design</a></li>
+							<li><a href="Brand/Ferruccio.html">Ferruccio Lamborghini</a></li>
+							<li><a href="Brand/Marcello.html">Marcello Gandhini</a></li>
+							<li><a href="Brand/Giampaollo.html">Giampaollo Dallara</a></li>
+							<li><a href="Brand/Masterpieces.html">Masterpieces</a></li>
+							<li><a href="Brand/Design.html">Design</a></li>
 						</ul>
 				</div>
 				<div class=" col-md-4">
 					<h5 class="headin5_amrc col_white_amrc pt2">Ownership</h5>
 					<ul class="footer_ul_amrc">
-						<li><a href="../Ownership/Dealer.html">Dealer Locator</a></li>
-						<li><a href="../Ownership/Service.html">Service Locator</a></li>
-						<li><a href="../Ownership/Center.html">Coullisin Center</a></li>
-						<li><a href="../Ownership/Sparepart.html">Sparepart</a></li>
-						<li><a href="../Ownership/Accessori.html">Accessori Originali</a></li>
+						<li><a href="Ownership/Dealer.html">Dealer Locator</a></li>
+						<li><a href="Ownership/Service.html">Service Locator</a></li>
+						<li><a href="Ownership/Center.html">Coullisin Center</a></li>
+						<li><a href="Ownership/Sparepart.html">Sparepart</a></li>
+						<li><a href="Ownership/Accessori.html">Accessori Originali</a></li>
 					</ul>
 				</div>	
 			</div>
